[Update] Modify logic register functionality
